--- a/RelojChecador/RelojChecador/RelojChecador.csproj
+++ b/RelojChecador/RelojChecador/RelojChecador.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Administrativo.cs" />
     <Compile Include="Empleado.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Program.cs" />
